--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">Todolist</string>
+    <string name="app_name">Список дел</string>
+
+    <string name="creation_toolbar">Добавить дело</string>
+    <string name="creation_toolbar_add">Добавить</string>
+    <string name="creation_title_hint">Название дела</string>
+    <string name="creation_desc_hint">Описание</string>
 </resources>
