--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
-    <string name="app_name">Список дел</string>
+    <string name="app_name">TodoList</string>
+
+    <string name="main_title">Список дел</string>
 
     <string name="creation_toolbar">Добавить</string>
     <string name="creation_toolbar_add">Добавить</string>
